scrollbar fix

--- a/assets/admin/css/style.less
+++ b/assets/admin/css/style.less
@@ -109,7 +109,8 @@
     .output-code,
     .output-sql {
       margin-top: 10px;
-      max-height: calc( 100vh - 210px );
+      margin-bottom: 0;
+      max-height: calc( 100vh - 235px );
       overflow: scroll;
     }
 
